--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
