--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "shareplay-example",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.13",
+    "expo-updates": "~0.10.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-splash-screen": "~0.13.3",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
